--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- <script type="application/ld+json" src="movie.json" async></script> -->
   </head>
   <body>
     <div class="container">
